--- a/style.css
+++ b/style.css
@@ -9,4 +9,12 @@ html {
 body {
     color: deeppink;
     font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+}
+.container {
+    margin: 20rem;
+    padding: 8rem;
+    border: 1rem dashed black;
+    align-items: center;
+    text-align: center;
 }
