--- a/style.css
+++ b/style.css
@@ -11,10 +11,22 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
 }
-.container {
-    margin: 20rem;
-    padding: 8rem;
-    border: 1rem dashed black;
+div {
+    display: inline-block;
+    width: 30rem;
+    height: auto;
+    margin: 2rem;
+    padding: 3rem;
     align-items: center;
     text-align: center;
+}
+.cabecera {
+    background-color: lightyellow;
+    color: maroon;
+    border: 0.1rem solid black;
+
+}
+.container {
+    border: 0.1rem dashed black;
+    background-color: cornsilk;
 }
