--- a/style.css
+++ b/style.css
@@ -10,23 +10,31 @@ body {
     color: deeppink;
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
+    font-size: 2rem;
 }
 div {
     display: inline-block;
-    width: 30rem;
+    width: 60rem;
     height: auto;
-    margin: 2rem;
-    padding: 3rem;
     align-items: center;
     text-align: center;
 }
-.cabecera {
+.container, .cabecera {
     background-color: lightyellow;
     color: maroon;
+    width: cal(60rem - 1px);
     border: 0.1rem solid black;
-
+    margin: 0.4rem;
 }
 .container {
-    border: 0.1rem dashed black;
-    background-color: cornsilk;
+    background-color: whitesmoke;
+    margin-top: 0;
+}
+.container h1{
+    font-size: 3rem;
+    padding: 0.8rem;
+    color: purple;
+}
+div p {
+    padding: 0.8rem;
 }
