--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 }
 body {
     color: deeppink;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     align-items: center;
 }
 .container {
@@ -17,4 +17,12 @@ body {
     border: 1rem dashed black;
     align-items: center;
     text-align: center;
+}
+div h1 {
+    padding: 4px;
+    font-size: 28px;
+}
+div p {
+    padding: 4px;
+    font-size: 16px;
 }
